--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
 asgiref==3.9.2
+contourpy==1.3.2
+cycler==0.12.1
 Django==5.2.6
-numpy==2.3.4
+fonttools==4.60.1
+kiwisolver==1.4.9
+matplotlib==3.10.7
+numpy==2.2.6
+opencv-python==4.12.0.88
+packaging==25.0
+pandas==2.3.3
 pillow==11.3.0
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.15.0
 tzdata==2025.2
