--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.9.2
 contourpy==1.3.2
 cycler==0.12.1
+dj-database-url==3.0.1
 Django==5.2.6
 fonttools==4.60.1
+gunicorn==23.0.0
 kiwisolver==1.4.9
 matplotlib==3.10.7
 numpy==2.2.6
@@ -10,6 +12,7 @@ opencv-python==4.12.0.88
 packaging==25.0
 pandas==2.3.3
 pillow==11.3.0
+psycopg2-binary==2.9.11
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
@@ -17,3 +20,4 @@ six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.15.0
 tzdata==2025.2
+whitenoise==6.11.0
